# yolov5

./: README.md  pyproject.toml  requirements.txt  setup.py
yolov5/: __init__.py  export.py  train.py  val.py
yolov5/classify/: __init__.py  predict.py  train.py  val.py
yolov5/data/: SKU-110K.yaml  VisDrone.yaml  xView.yaml
yolov5/detect/: detect.py  train.py  val.py
yolov5/models/: common.py  experimental.py  yolo.py
yolov5/segment/: __init__.py  predict.py  train.py  val.py
yolov5/utils/: dataloaders.py  loss.py  plots.py  torch_utils.py
yolov5/utils/loggers/: __init__.py
yolov5/utils/segment/: dataloaders.py
